# elf_loading

./: .gitignore  CMakeLists.txt  README.md  lib.c  lib.cpp
include/: elf_loader.hpp  elf_view.hpp  output.hpp  shm_api_wrap.hpp  shm_errs.hpp  shm_support.hpp  span.hpp
src/: elf_loader.cpp  elf_view.cpp  main.cpp
